--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -102,7 +102,7 @@ body {
     padding: 0;
     position: absolute;
     top: 48px;
-    left: 1%;
+    left: 1px;
     right: 1%;
     margin-bottom: 1%;
     width: auto;
@@ -169,7 +169,7 @@ body {
 .submenu li {
     display: block;
     margin-top: 2px;
-    padding-left: 50px;
+    padding-left: 20px;
     margin-left: 30px;
     text-shadow: 0 -1px 0 #000;
 }
