--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -10,7 +10,7 @@ body {
     background: linear-gradient(to right, rgba(8, 7, 10, 1) 20%, rgba(209, 209, 209, 1) 23%, rgba(209, 209, 209, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#08070a', endColorstr='#d1d1d1', GradientType=1);
     color: black;
-    font: 16px;
+    font: 16em;
     line-height: 1.5;
     font-family: Monaco, "New Century Schoolbook", "Times";
 }
@@ -48,31 +48,28 @@ body {
     background: linear-gradient(135deg, rgba(45, 91, 74, 0.8) 15%, rgba(209, 209, 209, 0.8) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#2d5b4a', endColorstr='#d1d1d1', GradientType=1);
 }
-
-
 .gallerytable {
     padding: 0;
-    margin:0;
+    margin: 0;
     max-width: 300%;
 }
 .gallerytablediv {
- max-height: 450px; width: 100%;
-    overflow-x: scroll; 
+    max-height: 450px;
+    width: 100%;
+    overflow-x: scroll;
     overflow-y: hidden;
 }
 .gallerytable tr {
-    padding: 0; 
-    margin:0;
-    overflow-x: scroll; 
+    padding: 0;
+    margin: 0;
+    overflow-x: scroll;
     height: 400px;
 }
 .gallerytable tr td {
-
-    padding: 0; 
-    margin:0;
+    padding: 0;
+    margin: 0;
     height: 400px;
 }
-
 .gallerytable tr td a img {
     max-height: 350px;
     padding: 0;
@@ -87,7 +84,6 @@ body {
     min-width: 30%;
     z-index: 400;
 }
-
 .projectpic {
     width: 50%;
     height: 50%;
@@ -104,7 +100,7 @@ body {
     top: 30px;
     left: 1px;
     right: 1%;
-        padding-left: 20px;
+    padding-left: 20px;
     margin-left: 30px;
     margin-bottom: 1%;
     width: auto;
@@ -167,10 +163,9 @@ body {
 }
 .submenu li {
     display: block;
-    padding-top:4px;
+    padding-top: 4px;
     text-shadow: 0 -1px 0 #000;
 }
-
 .submenu li a {
     margin-top: 4px;
     margin-left: 25%;
@@ -183,11 +178,8 @@ body {
     padding-top: 5px;
     padding-left: 2px;
     cursor: pointer;
-    z-index: 555; 
+    z-index: 555;
 }
-
-
-
 .dropdowncontainer:hover > .submenu {
     display: block !important;
     opacity: 1 !important;
@@ -304,9 +296,8 @@ body {
     }
 }
 #menucontent {
-    float:left;
+    float: left;
     display: inline;
-    
 }
 li {
     line-height: 1.4;
@@ -319,9 +310,9 @@ li {
 
 .anchor {
     top: -125px;
-    display: inline; position: relative;
+    display: inline;
+    position: relative;
 }
-
 header {
     width: 100%;
     padding: 20px 0;
@@ -352,16 +343,17 @@ header h2 {
 }
 /* Main Content
 */
+
 #menuul {
-    display: inline; margin:0px;
+    display: inline;
+    margin: 0px;
     padding-left: 0px;
 }
-
 #menuul li {
-margin:0;
+    margin: 0;
     outline-style: none;
-     list-style: none; 
-    padding:0;
+    list-style: none;
+    padding: 0;
 }
 #main_content {
     width: 100%;
@@ -448,7 +440,6 @@ pre {
     overflow: auto;
     overflow-y: hidden;
 }
-
 hr {
     height: 0;
     border: 0;
@@ -467,14 +458,14 @@ hr {
     background: -ms-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
     background: linear-gradient(135deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bc8f27', endColorstr='#ce1818', GradientType=1);
-    padding: 7px 5px;
-    margin-left: 6px;
-    border-radius: 5px;
+    padding: .6em .7em;
+    margin-left: .4em;
+    border-radius: .6em;
     border: 1px solid transparent;
     color: yellow;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
-    font-size: 70%;
+    font-size: .7em;
     text-decoration: none;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
