--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -1,18 +1,20 @@
 body {
     margin: 0;
     padding: 0;
-    background: rgb(8, 7, 10);
-    background: -moz-linear-gradient(left, rgba(8, 7, 10, 1) 15%, rgba(209, 209, 209, 1) 23%, rgba(209, 209, 209, 1) 100%);
-    background: -webkit-gradient(linear, left top, right top, color-stop(15%, rgba(8, 7, 10, 1)), color-stop(23%, rgba(209, 209, 209, 1)), color-stop(100%, rgba(209, 209, 209, 1)));
-    background: -webkit-linear-gradient(left, rgba(8, 7, 10, 1) 20%, rgba(209, 209, 209, 1) 23%, rgba(209, 209, 209, 1) 100%);
-    background: -o-linear-gradient(left, rgba(8, 7, 10, 1) 20%, rgba(209, 209, 209, 1) 23%, rgba(209, 209, 209, 1) 100%);
-    background: -ms-linear-gradient(left, rgba(8, 7, 10, 1) 20%, rgba(209, 209, 209, 1) 23%, rgba(209, 209, 209, 1) 100%);
-    background: linear-gradient(to right, rgba(8, 7, 10, 1) 20%, rgba(209, 209, 209, 1) 23%, rgba(209, 209, 209, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#08070a', endColorstr='#d1d1d1', GradientType=1);
     color: black;
-    font: 16em;
+    font: 15em;
     line-height: 1.5;
-    font-family: Monaco, "New Century Schoolbook", "Times";
+    font-family: "Lucida Grande","New Century Schoolbook", "Times";
+background: #ffd400; /* Old browsers */
+background: -moz-linear-gradient(left,  #ffd400 3%, #ffffff 24%, #ffffff 90%, #ffd400 96%, #efefef 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right top, color-stop(3%,#ffd400), color-stop(24%,#ffffff), color-stop(90%,#ffffff), color-stop(96%,#ffd400), color-stop(100%,#efefef)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(left,  #ffd400 3%,#ffffff 24%,#ffffff 90%,#ffd400 96%,#efefef 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(left,  #ffd400 3%,#ffffff 24%,#ffffff 90%,#ffd400 96%,#efefef 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(left,  #ffd400 3%,#ffffff 24%,#ffffff 90%,#ffd400 96%,#efefef 100%); /* IE10+ */
+background: linear-gradient(to right,  #ffd400 3%,#ffffff 24%,#ffffff 90%,#ffd400 96%,#efefef 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd400', endColorstr='#efefef',GradientType=1 ); /* IE6-9 */
+
+
 }
 /* General & 'Reset' Stuff */
 
@@ -83,6 +85,7 @@ body {
     max-width: 60%;
     min-width: 30%;
     z-index: 400;
+
 }
 .projectpic {
     width: 50%;
@@ -131,6 +134,17 @@ body {
     height: 100%;
     max-width: 22%;
     min-width: 14%;
+        border: 1px thin;
+    border-radius: 5px;
+background: #383838; /* Old browsers */
+background: -moz-linear-gradient(-45deg,  #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, right bottom, color-stop(5%,#383838), color-stop(19%,#000000), color-stop(40%,#2d2d2d), color-stop(60%,#111111), color-stop(76%,#2b2b2b), color-stop(91%,#1c1c1c), color-stop(100%,#131313)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(-45deg,  #383838 5%,#000000 19%,#2d2d2d 40%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg,  #383838 5%,#000000 19%,#2d2d2d 40%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg,  #383838 5%,#000000 19%,#2d2d2d 40%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%); /* IE10+ */
+background: linear-gradient(135deg,  #383838 5%,#000000 19%,#2d2d2d 40%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#383838', endColorstr='#131313',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
     /* border: 2px solid; */
 }
 #top {
@@ -151,7 +165,7 @@ body {
     color: #F87217;
     width: auto;
     max-width: 10%;
-    font: 16px;
+    font: 15em;
     line-height: 1.5;
 }
 #toc ul li a:hover {
@@ -246,6 +260,8 @@ body {
     /* IE 6-9 */
     z-index: 444;
     width: 185px;
+    float: right;
+    margin-left: 1%;
     max-width: 800px;
     height: 200px;
     transition: width 2s, height 2s, transform 2s, effect 4s;
@@ -319,12 +335,12 @@ header {
     margin: 0 0 40px 0;
 }
 header h1 {
-    font-size: 25px;
+    font-size: 2em;
     line-height: 1.5;
     /* margin: 0 0 0 -40px; */
     font-weight: bold;
     margin-left: 5px;
-    font-family: Monaco, "New Century Schoolbook", "Times";
+    font-family: "Lucida Grande","New Century Schoolbook", "Times";
     color: #EEC169;
     text-shadow: 2px 1px 1px #FB0C05;
     /* text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1); */
@@ -332,7 +348,7 @@ header h1 {
     -webkit-font-smoothing: antialiased;
 }
 header h2 {
-    font-size: 18px;
+    font-size: 16em;
     font-weight: 300;
     color: #666;
 }
@@ -369,30 +385,30 @@ h4,
 h5,
 h6 {
     font-weight: normal;
-    font-family: Monaco, "New Century Schoolbook", "Times";
+    font-family: "Lucida Grande","New Century Schoolbook", "Times";
     color: #e65c12;
     letter-spacing: -0.03em;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
 }
 #main_content h1 {
-    font-size: 30px;
+    font-size: 22em;
 }
 #main_content h2 {
-    font-size: 24px;
+    font-size: 23em;
 }
 #main_content h3 {
-    font-size: 18px;
+    font-size: 21em;
 }
 #main_content h4 {
-    font-size: 14px;
+    font-size: 19em;
 }
 #main_content h5 {
-    font-size: 12px;
+    font-size: 17em;
     text-transform: uppercase;
     margin: 0 0 5px 0;
 }
 #main_content h6 {
-    font-size: 12px;
+    font-size: 15em;
     text-transform: uppercase;
     color: #999;
     margin: 0 0 5px 0;
@@ -406,7 +422,7 @@ ul li {
 }
 ul li:before {
     content: "=>";
-    font-family: Monaco, "New Century Schoolbook", "Times";
+    font-family: "Lucida Grande","New Century Schoolbook", "Times";
     font-size: 1.4;
     color: #black;
     padding-top: 20px;
@@ -415,7 +431,7 @@ ul li:before {
     line-height: 1.4;
 }
 .arrowStyle {
-    font-family: Monaco, "New Century Schoolbook", "Times";
+    font-family: "Lucida Grande","New Century Schoolbook", "Times";
     font-size: 13px;
     color: #b5e853;
     margin-left: -37px;
