--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -41,14 +41,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd400', end
     border: 1px thin;
     border-radius: 2px;
     border-color: transparent;
-    background: rgb(45, 91, 74);
-    background: -moz-linear-gradient(-45deg, rgba(45, 91, 74, 0.8) 15%, rgba(209, 209, 209, 0.8) 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(15%, rgba(45, 91, 74, 1)), color-stop(100%, rgba(209, 209, 209, 1)));
-    background: -webkit-linear-gradient(-45deg, rgba(45, 91, 74, 0.8) 15%, rgba(209, 209, 209, 0.8) 100%);
-    background: -o-linear-gradient(-45deg, rgba(45, 91, 74, 0.8) 15%, rgba(209, 209, 209, 0.8) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(45, 91, 74, 0.8) 15%, rgba(209, 209, 209, 0.8) 100%);
-    background: linear-gradient(135deg, rgba(45, 91, 74, 0.8) 15%, rgba(209, 209, 209, 0.8) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#2d5b4a', endColorstr='#d1d1d1', GradientType=1);
+background: -moz-linear-gradient(45deg,  rgba(76,76,76,1) 0%, rgba(20,20,20,0.95) 12%, rgba(102,102,102,0.91) 22%, rgba(102,102,102,0.8) 50%, rgba(102,102,102,0.83) 58%, rgba(71,71,71,0.86) 65%, rgba(58,58,58,0.9) 76%, rgba(43,43,43,0.96) 90%, rgba(28,28,28,0.96) 91%, rgba(19,19,19,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,rgba(76,76,76,1)), color-stop(12%,rgba(20,20,20,0.95)), color-stop(22%,rgba(102,102,102,0.91)), color-stop(50%,rgba(102,102,102,0.8)), color-stop(58%,rgba(102,102,102,0.83)), color-stop(65%,rgba(71,71,71,0.86)), color-stop(76%,rgba(58,58,58,0.9)), color-stop(90%,rgba(43,43,43,0.96)), color-stop(91%,rgba(28,28,28,0.96)), color-stop(100%,rgba(19,19,19,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(45deg,  rgba(76,76,76,1) 0%,rgba(20,20,20,0.95) 12%,rgba(102,102,102,0.91) 22%,rgba(102,102,102,0.8) 50%,rgba(102,102,102,0.83) 58%,rgba(71,71,71,0.86) 65%,rgba(58,58,58,0.9) 76%,rgba(43,43,43,0.96) 90%,rgba(28,28,28,0.96) 91%,rgba(19,19,19,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(45deg,  rgba(76,76,76,1) 0%,rgba(20,20,20,0.95) 12%,rgba(102,102,102,0.91) 22%,rgba(102,102,102,0.8) 50%,rgba(102,102,102,0.83) 58%,rgba(71,71,71,0.86) 65%,rgba(58,58,58,0.9) 76%,rgba(43,43,43,0.96) 90%,rgba(28,28,28,0.96) 91%,rgba(19,19,19,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(45deg,  rgba(76,76,76,1) 0%,rgba(20,20,20,0.95) 12%,rgba(102,102,102,0.91) 22%,rgba(102,102,102,0.8) 50%,rgba(102,102,102,0.83) 58%,rgba(71,71,71,0.86) 65%,rgba(58,58,58,0.9) 76%,rgba(43,43,43,0.96) 90%,rgba(28,28,28,0.96) 91%,rgba(19,19,19,1) 100%); /* IE10+ */
+background: linear-gradient(45deg,  rgba(76,76,76,1) 0%,rgba(20,20,20,0.95) 12%,rgba(102,102,102,0.91) 22%,rgba(102,102,102,0.8) 50%,rgba(102,102,102,0.83) 58%,rgba(71,71,71,0.86) 65%,rgba(58,58,58,0.9) 76%,rgba(43,43,43,0.96) 90%,rgba(28,28,28,0.96) 91%,rgba(19,19,19,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
 }
 .gallerytable {
     padding: 0;
